# Plinth-Core

./: .gitignore  CONDITIONAL_COMPILATION_REPORT.html  Cargo.toml  README.md  Readme.md  Trunk.toml  flake.nix  generate-files.js  index.html  package-lock.json  package.json  prep-index.js  tsconfig.json
examples/: primitives_example.rs
plinth-primitives/: Cargo.toml  README.md
plinth-primitives/examples/: basic_usage.rs  integration_example.rs
plinth-primitives/src/: lib.rs
plinth-primitives/src/batch/: instance_batch.rs  mod.rs
plinth-primitives/src/primitives/: circle.rs  mod.rs  rectangle.rs  triangle.rs
plinth-primitives/src/renderer/: mod.rs  primitive_renderer.rs
plinth-primitives/src/shaders/: circle.wgsl  mod.rs
plinth-primitives/src/types/: color.rs  mod.rs  transform.rs
plinth-styles/: Cargo.toml  README.md
plinth-styles/src/: lib.rs  watcher.rs
plinth-styles/src/mapping/: class_mapper.rs  mod.rs
plinth-styles/src/parser/: css_parser.rs  mod.rs
plinth-styles/src/types/: css_class.rs  mod.rs
src/: app.rs  graphics.rs  lib.rs  main.rs  my_app.rs  plinth_app.rs  util.rs  web_canvas.rs
src/ts/: index.tsx
src/web/: src.html
src/web/css/: plinth.css
src/web/ts/: index.tsx
wasm/: Cargo.toml  DUAL_CANVAS_README.md  README.md  build.sh  start_server.py  start_server.sh  start_server_simple.py
wasm/src/: lib.rs
winit/: Cargo.toml  README.md
winit/src/: main.rs
