[package]
name = "plinth-core"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/gusjengis/Plinth-Core"
description = "The core library for Plinth. Handles the creation of a winit window with a wgpu rendering context. Defines an inteferface for external apps to execute their code during certain events (Resizing, User Input, Rendering, Initialization, etc.)."
license = "MIT OR Apache-2.0"

[features]
default = []
webgl = ["wgpu/webgl"]

[dependencies]
winit = { version = "0.30.8" }
env_logger = {version = "0.11.5"}
log = { version = "0.4.22"}
wgpu = { version = "24.0.1"}
pollster = {version ="0.4.0"}
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.100"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen-futures = "0.4.49"
