[package]
name = "plinth-core"
version = "0.1.2"
edition = "2024"
authors = ["gusjengis <gusjengis@example.com>"]
rerepository = "https://github.com/gusjengis/Plinth-Core"
description = "The core library for Plinth. Handles the creation of a winit window with a wgpu rendering context. Defines an inteferface for external apps to execute their code during certain events (Resizing, User Input, Rendering, Initialization, etc.)."
license = "MIT OR Apache-2.0"

[features]
default = ["winit"]
winit = ["dep:winit", "dep:env_logger", "dep:pollster"]
web-canvas = ["dep:web-sys", "dep:js-sys", "dep:wasm-bindgen-futures", "dep:raw-window-handle", "wgpu/webgl"]
webgl = ["wgpu/webgl"]

[dependencies]
# Core dependencies
wgpu = { version = "26.0.1" }
log = { version = "0.4.22" }

# Conditional dependencies
winit = { version = "0.30.12", optional = true }
env_logger = { version = "0.11.5", optional = true }
pollster = { version = "0.4.0", optional = true }

# Web dependencies
wasm-logger = { version = "0.2.0", optional = true }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = { version = "0.4.49", optional = true }
web-sys = { version = "0.3", features = [
    "HtmlCanvasElement", "Window", "Document", "Element", "Event", "EventTarget"
], optional = true }
js-sys = { version = "0.3", optional = true }
raw-window-handle = { version = "0.6", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
wasm-bindgen-futures = "0.4.49"
