[package]
name = "plinth-styles"
version = "0.1.0"
edition = "2021"
authors = ["gusjengis <gusjengis@example.com>"]
description = "CSS to WebGPU style mapping for Plinth primitives"
license = "MIT OR Apache-2.0"

[dependencies]
plinth-primitives = { path = "../plinth-primitives" }
thiserror = "1.0"
log = "0.4"

[features]
default = []
web = ["web-sys", "wasm-bindgen", "js-sys", "console_log"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
    "Element", "HtmlElement", "Window", "Document", "CssStyleDeclaration", "CssRule", "CssRuleList", "StyleSheet", "CssStyleSheet", "MutationObserver", "MutationRecord", "Node", "EventTarget", "MutationObserverInit", "HtmlHeadElement", "HtmlStyleElement", "CssStyleRule", "CssRuleList", "HtmlBodyElement"
], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
console_log = { version = "1.0", optional = true }
