[package]
name = "wasm_test"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
plinth-core = { path = "..", features = ["web-canvas"] }
plinth-primitives = { path = "../plinth-primitives" }
plinth-styles = { path = "../plinth-styles" }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.49"
console_error_panic_hook = "0.1.7"
console_log = "1.0"
glam = "0.25"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  "HtmlCanvasElement",
  "Window",
  "Document",
  "Element",
  "Event",
  "EventTarget"
]